--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -9,11 +9,8 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-\draftnote{
-    This document is examining the ratio of the parts which can be automatically optimized by Polly.
-    Further the reasons why larger parts are rejected and the theoretical impact if they would not be rejected.
-}
-
+This document is investigating the coverage of the regions automatically optimizable within the polyhedral model according to the run time, reasons for the coverage not being even larger and the possible increase of the coverage when the regions contained by the coverage could be extended to the size of next larger one.\\
+The most important points this study reveals consist of the fact that the coverage is not improved significally when extending the regions by one step and that the most common reasons for rejecting the next bigger region can not or at least not simply solved.
 \begin{comment}
     \begin{itemize}
         \item Plakative Stichworte
@@ -21,7 +18,6 @@
         \item Ausblick
         \item Ergebnis
     \end{itemize}
-\end{comment}
 \draftnote{
     \begin{itemize}
         \item Background: Give a brief introducing notice about the motivation for conducting the study.
@@ -38,16 +34,15 @@
         \item keywords
     \end{itemize}
 }
+\end{comment}
 
 \vfill
 
 \begin{otherlanguage}{ngerman}
     \pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
     \chapter*{Zusammenfassung}
-    \draftnote{
-    Dieses Dokument beschäftigt sich mit dem Anteil der durch Polly automatisch optimierbaren Bereiche.
-    Darüber hinaus wird der Frage nachgegangen, mit welchen Gründen größere Bereiche abgelehnt werden und auch mit den theoritischen Auswirkungen, wenn diese erkannt worden wären.
-    }
+    Dieses Dokument untersucht die Überdeckung der Laufzeit eines Programs bzgl. Regionen, die automatisch im Rahmen des Polyedermodells optimiert werden können, die Gründe warum diese Überdeckung nicht noch größer ist und den möglichen Anstieg der Überdeckung, falls die Regionen, die in der Überdeckung enthalten sind, die Größe der nächst größeren Region hätten.\\
+    Die wichtigsten Punkte, die diese Studie erarbeitet, bestehen in der Tatsache, dass die Überdeckung nicht bedeutend steigt, wenn die Regionen auf die Größe der nächst größeren Regionen erweitert werden, und dass die häufigsten Gründe, warum die Regionen nicht erweitert werden konnten nicht oder zumindest nicht einfach gelöst werden können.
 \end{otherlanguage}
 
 \endgroup
