--- a/variables.tex
+++ b/variables.tex
@@ -18,3 +18,5 @@
 \newcommand{\overheadRounds}{10\xspace}
 \newcommand{\overheadIterations}{1000000\xspace} %Iterations for determining measurementOverhead
 \newcommand{\utestPValue}{0.3753312\xspace}
+\newcommand{\speedupScops}{1.639169\xspace}
+\newcommand{\speedupMaxRegions}{1.696176\xspace}
