Corrections and nailcare all over the place

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -9,8 +9,8 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-This document is investigating the coverage of the regions automatically optimizable within the polyhedral model according to the run time, reasons for the coverage not being even larger and the possible increase of the coverage when the regions contained by the coverage could be extended to the size of next larger one.\\
-The most important points this study reveals consist of the fact that the coverage is not improved significally when extending the regions by one step and that the most common reasons for rejecting the next bigger region can not or at least not simply solved.
+This document is investigating the coverage of the regions containing instructions of a program automatically optimizable within the polyhedral model according to the run time, reasons for the coverage not being even larger and the possible increase of the coverage if each region contained by the coverage could be extended to the size of the next larger region.\\
+The most important points this study reveals consist of the fact that the coverage is not improved significally when extending each region to the size of the next larger one and that the most common reasons for rejecting the next bigger region are of the kind which can not or at least not simply solved.
 \begin{comment}
     \begin{itemize}
         \item Plakative Stichworte
@@ -41,8 +41,8 @@ The most important points this study reveals consist of the fact that the covera
 \begin{otherlanguage}{ngerman}
     \pdfbookmark[1]{Zusammenfassung}{Zusammenfassung}
     \chapter*{Zusammenfassung}
-    Dieses Dokument untersucht die Überdeckung der Laufzeit eines Programs bzgl. Regionen, die automatisch im Rahmen des Polyedermodells optimiert werden können, die Gründe warum diese Überdeckung nicht noch größer ist und den möglichen Anstieg der Überdeckung, falls die Regionen, die in der Überdeckung enthalten sind, die Größe der nächst größeren Region hätten.\\
-    Die wichtigsten Punkte, die diese Studie erarbeitet, bestehen in der Tatsache, dass die Überdeckung nicht bedeutend steigt, wenn die Regionen auf die Größe der nächst größeren Regionen erweitert werden, und dass die häufigsten Gründe, warum die Regionen nicht erweitert werden konnten nicht oder zumindest nicht einfach gelöst werden können.
+    Dieses Dokument untersucht die Überdeckung der Laufzeit eines Programs bzgl. Regionen von Befehlen, die automatisch im Rahmen des Polyedermodells optimiert werden können, die Gründe warum diese Überdeckung nicht größer ist, d.\,h. warum die nächst größeren Regionen abgelehnt wurden und den möglichen Anstieg der Überdeckung, falls die Regionen, die in der Überdeckung enthalten sind, jeweils die Größe der nächst größeren Region hätten.\\
+    Die wichtigsten Punkte, die diese Studie erarbeitet, bestehen in der Feststellung, dass die Überdeckung nicht bedeutend steigt, wenn die Regionen auf die Größe der nächst größeren Regionen erweitert werden, und dass die häufigsten Gründe, warum die Regionen nicht erweitert werden konnten, nicht oder zumindest nicht einfach gelöst werden können.
 \end{otherlanguage}
 
 \endgroup
