--- a/tables/subjectPrograms.tex
+++ b/tables/subjectPrograms.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{lcC} \toprule
     \tableheadline{Name}     & \tableheadline{Version} & \tableheadline{Tested Inputs}\\
-    \toprule
+    \midrule
     \textbf{Benchmarks}\\
     lnt                      & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
     %MultiSourceApplications & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
@@ -21,7 +21,7 @@
     \midrule
     \textbf{Encryption}\\
     ccrypt                   & 1.10                    & Integrated tests\\
-    libressl                 & 2.1.6\\
+    libressl                 & 2.1.6                   & Integrated test-binaries\\
     \midrule
     \textbf{Multimedia}\\
     ffmpeg                   & 3.1.3                   & fate test-suite\\
