--- a/variables.tex
+++ b/variables.tex
@@ -13,7 +13,7 @@
 \newcommand{\dyncovs}{\(DynCov_s\)\xspace}
 
 \newcommand{\hTwoAbout}{60\%\xspace}
-\newcommand{\usefulRatio}{\draftnote{97}\%\xspace}
+\newcommand{\usefulRatio}{96.92\%\xspace}
 \newcommand{\measurementOverhead}{2.29s\xspace}
 \newcommand{\overheadRounds}{10\xspace}
 \newcommand{\overheadIterations}{1000000\xspace} %Iterations for determining measurementOverhead
