Improvements all over the place

--- a/references.bib
+++ b/references.bib
@@ -75,7 +75,7 @@
     author={Chris Lattner},
     title={The LLVM Foundation},
     howpublished={Blog Entry},
-    month={April},
+    month={4},
     year={2014}
 }
 @book{
@@ -153,7 +153,7 @@
     url={http://lists.llvm.org/pipermail/llvm-dev/2011-December/046445.html},
     howpublished={Mailing List},
     year={2011},
-    month={December}
+    month={12}
 }
 @url{
     LLVMUsers,
@@ -161,7 +161,7 @@
     author={llvm.org},
     url={http://llvm.org/Users.html},
     year={2009},
-    month={November},
+    month={11},
     urldate={2017-09-26}
 }
 @online{
