--- a/tables/subjectPrograms.tex
+++ b/tables/subjectPrograms.tex
@@ -2,7 +2,7 @@
     \tableheadline{Name}     & \tableheadline{Version} & \tableheadline{Tested Inputs}\\
     \midrule
     \textbf{Benchmarks}\\
-    lnt                      & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
+    lnt                      & (602882a)               & SPEC2006 input data (set:ref)\\
     %MultiSourceApplications & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
     %MultiSourceBenchmarks   & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
     %SingleSourceBenchmarks  & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
