--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -5,6 +5,7 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{minted} % should be added before scrhack %newfloat now working
 \usepackage{makecell}
+\usepackage{pdflscape}
 \usepackage{longtable}
 \usepackage{ltxtable}
 \usepackage{wrapfig}
@@ -118,7 +119,10 @@
 \usepackage{scrhack} % fix warnings when using KOMA with listings package
 \usepackage{xspace} % to get the spacing after macros right
 \usepackage{mparhack} % get marginpar right
-\usepackage{fixltx2e} % fixes some LaTeX stuff --> since 2015 in the LaTeX kernel (see below)
+\begingroup\expandafter\expandafter\expandafter\endgroup
+\expandafter\ifx\csname IncludeInRelease\endcsname\relax
+    \usepackage{fixltx2e} % fixes some LaTeX stuff --> since 2015 in the LaTeX kernel (see below)
+\fi
 %\usepackage[latest]{latexrelease} % will be used once available in more distributions (ISSUE #107)
 \PassOptionsToPackage{printonlyused,smaller}{acronym}
     \usepackage{acronym} % nice macros for handling all acronyms in the thesis
