--- a/tables/ratiosMaxRegions.tex
+++ b/tables/ratiosMaxRegions.tex
@@ -2,5 +2,10 @@
     \tableheadline{project} & \tableheadline{t\_parent} & \tableheadline{t\_total} & \tableheadline{dyncov}\\\toprule
     \csvreader[head to column names]{csv/report_ratiosMaxRegions.csv}{}{\csvcoli&\csvcolii&\csvcoliii&\csvcoliv\\}
     \\\bottomrule
-    \caption[The complete list of measured parents execution times]{The complete list of measured parents execution times. This also includes the SCoPs whose parents are toplevel regions}
+    \caption[The complete list of measured parents execution times]{
+        The complete list of measured parents execution times.
+        This also includes the SCoPs whose parents are toplevel regions.
+        This table contains the filtered execution times and coverages of all projects as described in \autoref{sec:deviations}.
+        Projects annotated like \enquote{\(program_{lnt}\)} belong to \lnt.
+    }
 \end{longtable}
