--- a/tables/ratiosScops.tex
+++ b/tables/ratiosScops.tex
@@ -2,5 +2,8 @@
     \tableheadline{project} & \tableheadline{t\_scop} & \tableheadline{t\_total} & \tableheadline{dyncov}\\\toprule
     \csvreader[head to column names]{csv/report_ratiosScops.csv}{}{\csvcoli&\csvcolii&\csvcoliii&\csvcoliv\\}
     \\\bottomrule
-    \caption{The complete list of measured SCoP execution times}
+    \caption[The complete list of measured SCoP execution times]{
+        This table contains the filtered execution times and coverages of all projects as described in \autoref{sec:deviations}.
+        Projects annotated like \enquote{\(program_{lnt}\)} belong to \lnt.
+    }
 \end{longtable}
