Spell checking all over the place

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -10,7 +10,7 @@
 
 \chapter*{Abstract}
 This document is investigating the coverage of the regions containing instructions of a program automatically optimizable within the polyhedral model according to the run time, reasons for the coverage not being even larger and the possible increase of the coverage if each region contained by the coverage could be extended to the size of the next larger region.\\
-The most important points this study reveals consist of the fact that the coverage is not improved significally when extending each region to the size of the next larger one and that the most common reasons for rejecting the next bigger region are of the kind which can not or at least not simply solved.
+The most important points this study reveals consist of the fact that the coverage is not improved significantly when extending each region to the size of the next larger one and that the most common reasons for rejecting the next bigger region are of the kind which can not or at least not simply solved.
 \begin{comment}
     \begin{itemize}
         \item Plakative Stichworte
