--- a/FrontBackmatter/Declaration.tex
+++ b/FrontBackmatter/Declaration.tex
@@ -6,7 +6,7 @@
 \chapter*{Declaration}
 \thispagestyle{empty}
 I, \myName, hereby certify that this bachelor thesis has been composed by myself and describes my own work unless otherwise stated.
-All references and verbatim extracts have been quoted and all sources of information have been specically acknowledged.
+All references and verbatim extracts have been quoted and all sources of information have been specially acknowledged.
 In addition, this thesis has not been accepted in any previous application for a degree.\\
 \\
 Hiermit versichere ich, \myName, dass ich diese Diplomarbeit selbsständig und ohne Benutzunganderer als der angegebenen Quellen und Hilfsmittel angefertigt habe und alle Ausführungen, die wörtlich oder sinngemäß übernommen wurden, als solche gekennzeichnet sind, sowie dass ich diese Diplomarbeit in gleicher oder ähnlicher Form noch keiner anderen Prüfungsbehörde vorgelegt habe.
