--- a/tables/ratiosScops.tex
+++ b/tables/ratiosScops.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{Xccc}
     \tableheadline{project} & \tableheadline{t\_scop} & \tableheadline{t\_total} & \tableheadline{dyncov}\\\toprule
-    \csvreader[head to column names]{csv/report_ratiosScops.csv}{}{\csvcoli&\csvcolii&\csvcoliii&\csvcoliv\\}
+    \csvreader[head to column names]{csv/report_ratiosScops.csv}{}{\(\csvcoli\)&\csvcolii&\csvcoliii&\csvcoliv\\}
     \\\bottomrule
     \caption[The complete list of measured SCoP execution times]{
         This table contains the filtered execution times and coverages of all projects as described in \autoref{sec:deviations}.
