Improve Related Work

--- a/references.bib
+++ b/references.bib
@@ -236,3 +236,24 @@
     title={Mann-Whitney-U-Test},
     url={http://www.methodenberatung.uzh.ch/de/datenanalyse/unterschiede/zentral/mann.html}
 }
+@online{
+    loopo,
+    title={Polyhedral Loop Parallelization: LooPo},
+    url={http://www.infosun.fmi.uni-passau.de/cl/loopo/}
+}
+@online{
+    pocc,
+    title={PoCC - the Polyhedral Compiler Collection},
+    url={http://web.cs.ucla.edu/~pouchet/software/pocc/}
+}
+@online{
+    pluto,
+    title={PLUTO - An automatic parallelizer and locality optimizer for affine loop nests},
+    url={http://pluto-compiler.sourceforge.net/}
+}
+@book{
+    latsee,
+    title={Iterative optimization in the polyhedral model: Part I, one-dimensional time},
+    year={2008},
+    author={L.-N. Pouchet and C. Bastoul and A. Cohen and N. Vasilache}
+}
