Improvements, nailcare, removing draftnotes

--- a/tables/ratiosScops.tex
+++ b/tables/ratiosScops.tex
@@ -4,6 +4,6 @@
     \\\bottomrule
     \caption[The complete list of measured SCoP execution times]{
         This table contains the filtered execution times and coverages of all projects as described in \autoref{sec:deviations}.
-        Projects annotated like \enquote{\(program_{lnt}\)} belong to \lnt.
+        Projects not explicitly found in \autoref{tab:subjectPrograms} belong to \lnt.
     }
 \end{longtable}
