--- a/references.bib
+++ b/references.bib
@@ -5,7 +5,7 @@
     title={POLLY—PERFORMING POLYHEDRAL OPTIMIZATIONS ON A LOW-LEVEL INTERMEDIATE REPRESENTATION},
     journal={World Scientific Publishing Company},
     url={http://grosser.es/publications/grosser-2012-Polly-Performing-polyhedral-optimizations-on-a-low-level-intermediate-representation.pdf},
-    urldate={2017-07-20}
+    urldate={2017-10-02}
 }
 @mastersthesis{
     GrosserDiploma,
@@ -15,7 +15,7 @@
     school={University Passau},
     type={master thesis},
     url={http://grosser.es/publications/grosser-2011-Enabling-Polyhedral-Optimizations-in-LLVM-diplomathesis.pdf},
-    urldate={2017-07-20}
+    urldate={2017-10-02}
 }
 @article{
     PolyhedronFeautrierLengauer,
@@ -31,7 +31,7 @@
     PolyhedronWikipedia,
     title={Polytope model},
     url={https://en.wikipedia.org/wiki/Polytope_model},
-    urldate={2017-07-24}
+    urldate={2017-07-27}
 }
 @online{
     PolyhedralEmpiricalStudy,
@@ -39,13 +39,13 @@
     title={The Potential of Polyhedral Optimization: An Empirical Study},
     year={2013},
     url={http://www.infosun.fim.uni-passau.de/publications/docs/SAG+13.pdf},
-    urldate={2017-08-03}
+    urldate={2017-10-10}
 }
 @online{
     LLVMWebsite,
     title={The LLVM Compiler Infrastructure},
     url={http://llvm.org},
-    urldate={2017-07-25}
+    urldate={2017-09-27}
 }
 @InProceedings{
     LLVMResearchBeginning,
@@ -61,7 +61,7 @@
     author={Chris Lattner},
     title={Introduction to the LLVM Compiler System},
     url={http://llvm.org/pubs/2008-10-04-ACAT-LLVM-Intro.pdf},
-    urldate={2017-07-25}
+    urldate={2017-09-17}
 }
 @online{
     PollyPresentation,
@@ -91,14 +91,15 @@
     author={Aditya Kumar and Sebastian Pop},
     title={SCoP Detection: A Fast Algorithm for Industrial Compilers},
     year={2016},
-    url={http://impact.gforge.inria.fr/impact2016/papers/impact2016-kumar.pdf}
+    url={http://impact.gforge.inria.fr/impact2016/papers/impact2016-kumar.pdf},
+    urldate={2017-10-02}
 }
 @online{
     AmdahlsLaw,
     title={Amdahl's Law},
     author={Aaron Michalove},
     url={http://home.wlu.edu/~whaleyt/classes/parallel/topics/amdahl.html},
-    urldate={2017-07-30}
+    urldate={2017-09-17}
 }
 @misc{
     GanserIterativeSchedule,
@@ -118,26 +119,26 @@
     title={Optimization opportunities based on the polyhedral model in GRAPHITE},
     author={Tobias Grosser},
     url={http://www.grosser.es/publications/grosser-2009-Optimization-opportunities-in-graphite-GCC-Summit.pdf},
-    urldate={2017-08-17}
+    urldate={2017-10-08}
 }
 @misc{
     gccGimple,
     title={GIMPLE - GCC Wiki},
     url={https://gcc.gnu.org/wiki/GIMPLE},
-    urldate={2017-08-17}
+    urldate={2017-08-30}
 }
 @misc{
     gccGraphite,
     title={GRAPHITE - GCC Wiki},
     url={https://gcc.gnu.org/wiki/Graphite},
-    urldate={2017-08-17}
+    urldate={2017-10-08}
 }
 @online{
     GrosserGraphiteDesign,
     title={Design of Graphite and the Polyhedral Compilation Package},
     author={Jan Sjödin and Sebastian Pop and Harsha Jagasin and Tobias Grosser and Antoniu Pop},
     url={http://www.grosser.es/publications/grosser-2009-Design-of-Graphite-and-the-Polyhedral-Compilation-Package-GCC-Summit.pdf},
-    urldate={2017-08-17}
+    urldate={2017-10-08}
 }
 @online{
     GenericGimple,
@@ -153,7 +154,8 @@
     url={http://lists.llvm.org/pipermail/llvm-dev/2011-December/046445.html},
     howpublished={Mailing List},
     year={2011},
-    month={12}
+    month={12},
+    urldate={2017-09-26}
 }
 @url{
     LLVMUsers,
@@ -168,88 +170,119 @@
     pyllvm,
     author={Anna Herlihy},
     title={PythonLLVM},
-    url={https://github.com/aherlihy/PythonLLVM}
+    url={https://github.com/aherlihy/PythonLLVM},
+    urldate={2017-09-27}
 }
 @online{
     rubyllvm,
     title={ruby-llvm},
-    url={https://github.com/ruby-llvm/ruby-llvm}
+    url={https://github.com/ruby-llvm/ruby-llvm},
+    urldate={2017-27-09}
 }
 @online{
     luallvm,
     title={LLVM Lua},
     author={Robert Gabriel Jakabosky},
-    url={http://lua-users.org/wiki/LlvmLua}
+    url={http://lua-users.org/wiki/LlvmLua},
+    urldate={2017-09-27}
 }
 @online{
     fortranllvm,
     title={flang},
-    url={https://github.com/flang-compiler/flang}
+    url={https://github.com/flang-compiler/flang},
+    urldate={2017-09-27}
+
 }
 @online{
     dragonegg,
     title={DragonEgg - Using LLVM as a GCC backend},
-    url={http://dragonegg.llvm.org/}
+    url={http://dragonegg.llvm.org/},
+    urldate={2017-09-27}
+
 }
 @online{
     llvmUndef,
     title={LLVM Language Reference Manual},
-    url={http://llvm.org/docs/LangRef.html#undefined-values}
+    url={http://llvm.org/docs/LangRef.html#undefined-values},
+    urldate={2017-10-05}
+
 }
 @online{
     llvmUnreachable,
     title={LLVM Language Reference Manual},
-    url={https://llvm.org/docs/LangRef.html#i-unreachable}
+    url={https://llvm.org/docs/LangRef.html#i-unreachable},
+    urldate={2017-10-05}
+
 }
 @online{
     oprofile,
     title={About OProfile},
-    url={http://oprofile.sourceforge.net/about/}
+    url={http://oprofile.sourceforge.net/about/},
+    urldate={2017-10-05}
+
 }
 @online{
     gprof,
     title={GNU gprof},
-    url={https://sourceware.org/binutils/docs/gprof/}
+    url={https://sourceware.org/binutils/docs/gprof/},
+    urldate={2017-10-05}
+
 }
 @online{
     papi,
     title={PAPI},
-    url={http://icl.cs.utk.edu/papi/}
+    url={http://icl.cs.utk.edu/papi/},
+    urldate={2017-10-05}
+
 }
 @online{
     slurm,
     title={Slurm Workload Manager},
-    url={https://slurm.schedmd.com/quickstart.html}
+    url={https://slurm.schedmd.com/quickstart.html},
+    urldate={2017-10-06}
+
 }
 @online{
     shapiroWilkTest,
     title={Shapiro-Wilk-Test},
-    url={http://www.statistics4u.info/fundstat_germ/ee_shapiro_wilk_test.html}
+    url={http://www.statistics4u.info/fundstat_germ/ee_shapiro_wilk_test.html},
+    urldate={2017-10-08}
+
 }
 @online{
     ttest,
     title={The T-Test},
-    url={http://socialresearchmethods.net/kb/stat_t.php}
+    url={http://socialresearchmethods.net/kb/stat_t.php},
+    urldate={2017-10-08}
+
 }
 @online{
     utest,
     title={Mann-Whitney-U-Test},
-    url={http://www.methodenberatung.uzh.ch/de/datenanalyse/unterschiede/zentral/mann.html}
+    url={http://www.methodenberatung.uzh.ch/de/datenanalyse/unterschiede/zentral/mann.html},
+    urldate={2017-10-08}
+
 }
 @online{
     loopo,
     title={Polyhedral Loop Parallelization: LooPo},
-    url={http://www.infosun.fmi.uni-passau.de/cl/loopo/}
+    url={http://www.infosun.fmi.uni-passau.de/cl/loopo/},
+    urldate={2017-10-09}
+
 }
 @online{
     pocc,
     title={PoCC - the Polyhedral Compiler Collection},
-    url={http://web.cs.ucla.edu/~pouchet/software/pocc/}
+    url={http://web.cs.ucla.edu/~pouchet/software/pocc/},
+    urldate={2017-10-09}
+
 }
 @online{
     pluto,
     title={PLUTO - An automatic parallelizer and locality optimizer for affine loop nests},
-    url={http://pluto-compiler.sourceforge.net/}
+    url={http://pluto-compiler.sourceforge.net/},
+    urldate={2017-10-09}
+
 }
 @book{
     latsee,
