Fix some compilation issues

--- a/references.bib
+++ b/references.bib
@@ -2,7 +2,7 @@
     PollyGrosser,
     author={Tobias Grosser and Armin Größlinger and Christian Lengauer},
     year={2012},
-    title={POLLY—PERFORMING POLYHEDRAL OPTIMIZATIONS ON A LOW-LEVEL INTERMEDIATE REPRESENTATION},
+    title={POLLY - PERFORMING POLYHEDRAL OPTIMIZATIONS ON A LOW-LEVEL INTERMEDIATE REPRESENTATION},
     journal={World Scientific Publishing Company},
     url={http://grosser.es/publications/grosser-2012-Polly-Performing-polyhedral-optimizations-on-a-low-level-intermediate-representation.pdf},
     urldate={2017-10-02}
@@ -157,7 +157,7 @@
     month={12},
     urldate={2017-09-26}
 }
-@url{
+@online{
     LLVMUsers,
     title={LLVM Users},
     author={llvm.org},
@@ -176,8 +176,9 @@
 @online{
     rubyllvm,
     title={ruby-llvm},
+    author={Takanori Ishikawa and Jeremy Voorhis},
     url={https://github.com/ruby-llvm/ruby-llvm},
-    urldate={2017-27-09}
+    urldate={2017-09-27}
 }
 @online{
     luallvm,
@@ -288,5 +289,6 @@
     latsee,
     title={Iterative optimization in the polyhedral model: Part I, one-dimensional time},
     year={2008},
+    publisher={IEEE CS},
     author={L.-N. Pouchet and C. Bastoul and A. Cohen and N. Vasilache}
 }
