--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -92,7 +92,7 @@
 %\PassOptionsToPackage{spanish,es-lcroman}{babel}
 \usepackage{babel}
 
-\usepackage{csquotes}
+\usepackage[style=american]{csquotes}
 \PassOptionsToPackage{%
     backend=biber, %instead of bibtex
     %backend=bibtex8,bibencoding=ascii,%
