Insert subscript lnt manually

--- a/tables/ratiosMaxRegions.tex
+++ b/tables/ratiosMaxRegions.tex
@@ -5,7 +5,7 @@
     \caption[The complete list of measured parents execution times]{
         The complete list of measured parents execution times.
         This also includes the SCoPs whose parents are top level regions.
-        This table contains the filtered execution times and coverages of all projects as described in \autoref{sec:deviations}.
-        Projects not explicitly found in \autoref{tab:subjectPrograms} belong to \lnt.
+        This table contains the yet unfiltered execution times and coverages of all projects as described in \autoref{sec:deviations}.
+        Projects annotated like \enquote{\(program_{lnt}\)} belong to \lnt.
     }
 \end{longtable}
