--- a/tables/ratiosScops.tex
+++ b/tables/ratiosScops.tex
@@ -3,7 +3,7 @@
     \csvreader[head to column names]{csv/report_ratiosScops.csv}{}{\(\csvcoli\)&\csvcolii&\csvcoliii&\csvcoliv\\}
     \\\bottomrule
     \caption[The complete list of measured SCoP execution times]{
-        This table contains the filtered execution times and coverages of all projects as described in \autoref{sec:deviations}.
-        Projects not explicitly found in \autoref{tab:subjectPrograms} belong to \lnt.
+        This table contains the yet unfiltered execution times and coverages of all projects as described in \autoref{sec:deviations}.
+        Projects annotated like \enquote{\(program_{lnt}\)} belong to \lnt.
     }
 \end{longtable}
