Add reference to clang

--- a/references.bib
+++ b/references.bib
@@ -292,3 +292,9 @@
     publisher={IEEE CS},
     author={L.-N. Pouchet and C. Bastoul and A. Cohen and N. Vasilache}
 }
+@online{
+    clang,
+    title={clang: a C language family frontend for LLVM},
+    url={http://clang.llvm.org/},
+    urldate={2017-10-11}
+}
