--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -316,7 +316,8 @@
 %minted configure
 \setminted{
     linenos,
-    breaklines
+    breaklines,
+    xleftmargin=1.8em
 }
 \newenvironment{code}{\captionsetup{type=listings}}{}
 
