Replace "alternative extensions" with a new study

--- a/references.bib
+++ b/references.bib
@@ -298,3 +298,10 @@
     url={http://clang.llvm.org/},
     urldate={2017-10-11}
 }
+@online{
+    spolly,
+    title={SPolly: Speculative Optimizations in the Polyhedral Model},
+    author={Johannes Doerfert and Clemens Hammacher and Kevin Streit and Sebastian Hack},
+    url={http://web.cse.ohio-state.edu/~pouchet.2/doc/impact-proceedings.13.pdf#page=63},
+    urldate={2017-10-12}
+}
