--- a/references.bib
+++ b/references.bib
@@ -305,3 +305,10 @@
     url={http://web.cse.ohio-state.edu/~pouchet.2/doc/impact-proceedings.13.pdf#page=63},
     urldate={2017-10-12}
 }
+@online{
+    benchbuild,
+    title={BenchBuild: A Large-Scale Empirical-Research Toolkit},
+    author={Andreas Simbürger and Floarian Sattler and Armin Größlinger and Christian Lengauer},
+    url={http://www.fim.uni-passau.de/fileadmin/files/forschung/mip-berichte/MIP-1602.pdf},
+    urldate={2017-10-13}
+}
