--- a/tables/subjectPrograms.tex
+++ b/tables/subjectPrograms.tex
@@ -2,44 +2,40 @@
     \tableheadline{Name}     & \tableheadline{Version} & \tableheadline{Tested Inputs}\\
     \midrule
     \textbf{Benchmarks}\\
-    lnt                      & (602882a)               & SPEC2006 input data (set:ref)\\
-    %MultiSourceApplications & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
-    %MultiSourceBenchmarks   & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
-    %SingleSourceBenchmarks  & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
-    %SPEC2006                & \draftnote{(602882a)}   & SPEC2006 input data (set:ref)\\
-    Povray                   & (54474e8)               & SPEC2006 input data (set:ref)\\
+    \textsc{LNT}                      & (602882a)               & SPEC2006 input data (set:ref)\\
+    \textsc{PovRAY}                   & (54474e8)               & SPEC2006 input data (set:ref)\\
     \midrule
     \textbf{Compression}\\
-    7z                       & 9.38.1                  & SPEC2006 input data (set:ref)\\
-    bzip2                    & 1.0.6                   & SPEC2006 input data (set:ref)\\
-    gzip                     & 1.6                     & SPEC2006 input data (set:ref)\\
-    xz                       & 5.2.1                   & SPEC2006 input data (set:ref)\\
+    \textsc{7z}                       & 9.38.1                  & SPEC2006 input data (set:ref)\\
+    \textsc{bzip2}                    & 1.0.6                   & SPEC2006 input data (set:ref)\\
+    \textsc{gzip}                     & 1.6                     & SPEC2006 input data (set:ref)\\
+    \textsc{xz}                       & 5.2.1                   & SPEC2006 input data (set:ref)\\
     \midrule
     \textbf{Database}\\
-    Leveldb                  & (bcd9a8e)               & Integrated benchmark\\
-    SQLite3                  & (3080900)               & leveldb's integrated benchmark\\
+    \textsc{Leveldb}                  & (bcd9a8e)               & Integrated benchmark\\
+    \textsc{SQLite3}                  & (3080900)               & leveldb's integrated benchmark\\
     \midrule
     \textbf{Encryption}\\
-    ccrypt                   & 1.10                    & Integrated tests\\
-    libressl                 & 2.1.6                   & Integrated test-binaries\\
+    \textsc{ccrypt}                   & 1.10                    & Integrated tests\\
+    \textsc{LibreSSL}                 & 2.1.6                   & Integrated test-binaries\\
     \midrule
     \textbf{Multimedia}\\
-    ffmpeg                   & 3.1.3                   & fate test-suite\\
-    povRAY                   & (54474e8)               & Integrated sample scenes\\
-    x264                     & (ba24899)               & Integrated benchmark\\
+    \textsc{ffmpeg}                   & 3.1.3                   & fate test-suite\\
+    \textsc{PovRAY}                   & (54474e8)               & Integrated sample scenes\\
+    \textsc{x264}                     & (ba24899)               & Integrated benchmark\\
     \midrule
     \textbf{Scientific}\\
-    LAMMPS                   & (9cf43f2)               & Integrated sample problems\\
-    LAPACK                   & 3.2.1                   & Integrated tests\\
-    LINPACK                  & 25.2.1994               & Integrated benchmark\\
+    \textsc{LAMMPS}                   & (9cf43f2)               & Integrated sample problems\\
+    \textsc{LAPACK}                   & 3.2.1                   & Integrated tests\\
+    \textsc{LINPACK}                  & 25.2.1994               & Integrated benchmark\\
     \midrule
     \textbf{Simulation}\\
-    crafty                   & 25.2                    & Integrated benchmark\\
-    lulesh                   & 1.0                     & Integrated benchmark\\
-    lulesh-omp               & 1.0                     & Integrated benchmark\\
+    \textsc{crafty}                   & 25.2                    & Integrated benchmark\\
+    \textsc{lulesh}                   & 1.0                     & Integrated benchmark\\
+    \textsc{lulesh-omp}               & 1.0                     & Integrated benchmark\\
     \midrule
     \textbf{Verification}\\
-    minisat                  & (5dede3a)               & SAT-Race 2008 (reduced)\\
+    \textsc{minisat}                  & (5dede3a)               & SAT-Race 2008 (reduced)\\
     \bottomrule
     \caption[Subject programs]{Subject programs and benchbuild used. (Versions in parenthesis represent short git hashes)}
     \label{tab:subjectPrograms}
